--- a/src/pages/galery/galery.pug
+++ b/src/pages/galery/galery.pug
@@ -11,114 +11,144 @@ block content
   div.filter
   div.card-galery
    +card({
-     image: 'room-350-1.jpg',
-     righthead:'№ 888',
-     righttext:' люкс',
-     tophead:'9 990₽',
-     toptext:' в сутки',
-     bottomhead:'145',
-     bottomtext:' Отзывов'
+     image1: 'room-350-1.jpg',
+     image2: 'room-350-2.jpg',
+     image3: 'room-350-3.jpg',
+     image4: 'room-350-4.jpg',
+     righthead:'№ 888 люкс',
+     tophead:'9 990₽ в сутки',
+     bottomhead:'145 Отзывов',
+     starName: 'cards-star1',
+     linkToRoom: 'room-details.html'
    })
    +card({
-     image: 'room-350-1.jpg',
-     righthead: '№ 888',
-     righttext: ' люкс',
-     tophead: '9 990₽',
-     toptext: ' в сутки',
-     bottomhead: '145',
-     bottomtext: ' Отзывов'
-   })
-   +card({
-     image: 'room-350-1.jpg',
-     righthead: '№ 888',
-     righttext: ' люкс',
-     tophead: '9 990₽',
-     toptext: ' в сутки',
-     bottomhead: '145',
-     bottomtext: ' Отзывов'
-   })
-   +card({
-     image: 'room-350-1.jpg',
-     righthead: '№ 888',
-     righttext: ' люкс',
-     tophead: '9 990₽',
-     toptext: ' в сутки',
-     bottomhead: '145',
-     bottomtext: ' Отзывов'
-   })
-   +card({
-     image: 'room-350-1.jpg',
-     righthead: '№ 888',
-     righttext: ' люкс',
-     tophead: '9 990₽',
-     toptext: ' в сутки',
-     bottomhead: '145',
-     bottomtext: ' Отзывов'
-   })
-   +card({
-     image: 'room-350-1.jpg',
-     righthead: '№ 888',
-     righttext: ' люкс',
-     tophead: '9 990₽',
-     toptext: ' в сутки',
-     bottomhead: '145',
-     bottomtext: ' Отзывов'
-   })
-   +card({
-     image: 'room-350-1.jpg',
-     righthead: '№ 888',
-     righttext: ' люкс',
-     tophead: '9 990₽',
-     toptext: ' в сутки',
-     bottomhead: '145',
-     bottomtext: ' Отзывов'
-   })
-   +card({
-     image: 'room-350-1.jpg',
-     righthead: '№ 888',
-     righttext: ' люкс',
-     tophead: '9 990₽',
-     toptext: ' в сутки',
-     bottomhead: '145',
-     bottomtext: ' Отзывов'
-   })
-   +card({
-     image: 'room-350-1.jpg',
-     righthead: '№ 888',
-     righttext: ' люкс',
-     tophead: '9 990₽',
-     toptext: ' в сутки',
-     bottomhead: '145',
-     bottomtext: ' Отзывов'
-   })
-   +card({
-     image: 'room-350-1.jpg',
-     righthead: '№ 888',
-     righttext: ' люкс',
-     tophead: '9 990₽',
-     toptext: ' в сутки',
-     bottomhead: '145',
-     bottomtext: ' Отзывов'
-   })
-   +card({
-     image: 'room-350-1.jpg',
-     righthead: '№ 888',
-     righttext: ' люкс',
-     tophead: '9 990₽',
-     toptext: ' в сутки',
-     bottomhead: '145',
-     bottomtext: ' Отзывов'
-   })
-   +card({
-     image: 'room-350-1.jpg',
-     righthead: '№ 888',
-     righttext: ' люкс',
-     tophead: '9 990₽',
-     toptext: ' в сутки',
-     bottomhead: '145',
-     bottomtext: ' Отзывов'
-   })
+     image1: 'room-352-1.jpg',
+     image2: 'room-352-2.jpg',
+     image3: 'room-352-3.jpg',
+     image4: 'room-352-4.jpg',
+     righthead: '№ 888 люкс',
+     tophead: '9 990₽ в сутки',
+     bottomhead: '145 Отзывов',
+     starName: 'cards-star2',
+     linkToRoom: 'room-details.html'
 
+   })
+   +card({
+     image1: 'room-444-1.jpg',
+     image2: 'room-444-2.jpg',
+     image3: 'room-444-3.jpg',
+     image4: 'room-444-4.jpg',
+     righthead: '№ 888 люкс',
+     tophead: '9 990₽ в сутки',
+     bottomhead: '145 Отзывов',
+     starName: 'cards-star3',
+     linkToRoom: 'room-details.html'
 
+   })
+   +card({
+     image1: 'room-450-1.jpg',
+     image2: 'room-450-2.jpg',
+     image3: 'room-450-3.jpg',
+     image4: 'room-450-4.jpg',
+     righthead: '№ 888 люкс',
+     tophead: '9 990₽ в сутки',
+     bottomhead: '145 Отзывов',
+     starName: 'cards-star4',
+     linkToRoom: 'room-details.html'
 
+   })
+   +card({
+     image1: 'room-666-1.jpg',
+     image2: 'room-666-2.jpg',
+     image3: 'room-666-3.jpg',
+     image4: 'room-666-4.jpg',
+     righthead: '№ 888 люкс',
+     tophead: '9 990₽ в сутки',
+     bottomhead: '145 Отзывов',
+     starName: 'cards-star5',
+     linkToRoom: 'room-details.html'
+   })
+   +card({
+     image1: 'room-678-1.jpg',
+     image2: 'room-678-2.jpg',
+     image3: 'room-678-3.jpg',
+     image4: 'room-678-4.jpg',
+     righthead: '№ 888 люкс',
+     tophead: '9 990₽ в сутки',
+     bottomhead: '145 Отзывов',
+     starName: 'cards-star6',
+     linkToRoom: 'room-details.html'
+
+   })
+   +card({
+     image1: 'room-740-1.jpg',
+     image2: 'room-740-2.jpg',
+     image3: 'room-740-3.jpg',
+     image4: 'room-740-4.jpg',
+     righthead: '№ 888 люкс',
+     tophead: '9 990₽ в сутки',
+     bottomhead: '145 Отзывов',
+     starName: 'cards-star8',
+     linkToRoom: 'room-details.html'
+
+   })
+   +card({
+     image1: 'room-840-1.jpg',
+     image2: 'room-840-2.jpg',
+     image3: 'room-840-3.jpg',
+     image4: 'room-840-4.jpg',
+     righthead: '№ 888 люкс',
+     tophead: '9 990₽ в сутки',
+     bottomhead: '145 Отзывов',
+     starName: 'cards-star9',
+     linkToRoom: 'room-details.html'
+
+   })
+   +card({
+     image1: 'room-856-1.jpg',
+     image2: 'room-856-2.jpg',
+     image3: 'room-856-3.jpg',
+     image4: 'room-856-4.jpg',
+     righthead: '№ 888 люкс',
+     tophead: '9 990₽ в сутки',
+     bottomhead: '145 Отзывов',
+     starName: 'cards-star10',
+     linkToRoom: 'room-details.html'
+
+   })
+   +card({
+     image1: 'room-888-1.jpg',
+     image2: 'room-888-2.jpg',
+     image3: 'room-888-3.jpg',
+     image4: 'room-888-4.jpg',
+     righthead: '№ 888 люкс',
+     tophead: '9 990₽ в сутки',
+     bottomhead: '145 Отзывов',
+     starName: 'cards-star11',
+     linkToRoom: 'room-details.html'
+
+   })
+   +card({
+     image1: 'room-980-1.jpg',
+     image2: 'room-980-2.jpg',
+     image3: 'room-980-3.jpg',
+     image4: 'room-980-4.jpg',
+     righthead: '№ 888 люкс',
+     tophead: '9 990₽ в сутки',
+     bottomhead: '145 Отзывов',
+     starName: 'cards-star12',
+     linkToRoom: 'room-details.html'
+
+   })
+   +card({
+     image1: 'room-982-1.jpg',
+     image2: 'room-982-2.jpg',
+     image3: 'room-982-3.jpg',
+     image4: 'room-982-4.jpg',
+     righthead: '№ 888 люкс',
+     tophead: '9 990₽ в сутки',
+     bottomhead: '145 Отзывов',
+     starName: 'cards-star13',
+     linkToRoom: 'room-details.html'
+   })
 
