--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -20,7 +20,8 @@ block content
         a.index-nav-link(href="ui.html") Ui Kit
       li.index-nav-item
         a.index-nav-link(href="form-elements.html") Form Elements
-      //include ../../blocks/dropdown/dropdown
+      li.index-nav-item
+        a.index-nav-link(href="cards.html") Cards
 
 
 
