--- a/src/blocks/input/input.scss
+++ b/src/blocks/input/input.scss
@@ -7,3 +7,13 @@
   border-radius: 4px;
   padding-left: 1em;
 }
+.input-field_date {
+  //font-family: Montserrat-Regular;
+  //font-style: normal;
+  //font-weight: normal;
+  //font-size: 14px;
+  //line-height: 24px;
+  ///* identical to box height, or 171% */
+  text-transform: uppercase;
+  //color: rgba(31, 32, 65, 0.25);
+}
