--- a/src/layout/cards/cards.scss
+++ b/src/layout/cards/cards.scss
@@ -2,44 +2,34 @@
   background-color: var(--color8);
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
   border-radius: 4px;
+  height: 257px;
 }
 .card-img-wrapper {
-  display: flex;
-  align-items: center;
-}
-.card-img-wrapper > i {
-  font-size: 24px;
-  line-height: 24px;
-  color: #ffffff;
-}
-.material-icons-right {
-  position: relative;
-  top: 50%;
-  left: -50px;
+  width: 270px;
+  .mmslick {
+    width: 100%;
+    height: 190px;
+  }
+  img {
+    width: 100%;
+    height: auto;
+  }
 }
 
-.material-icons-left {
-  position: relative;
-  top: 50%;
-  left: -270px;
-}
-.circle-wrapper {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-  left: -100px;
-  bottom: -60px;
-}
-.round:first-child {
-  background: var(--color8);
-}
-.round {
-  width: 10px;
-  height: 10px;
-  margin-right: 3px;
-  background: transparent;
-  border: 2px solid var(--color8);
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-}
+//.material-icons-right {
+//  font-size: 24px;
+//  line-height: 24px;
+//  color: red;
+//  position: relative;
+//  top: 50%;
+//  left: -50px;
+//}
+//
+//.material-icons-left {
+//  font-size: 24px;
+//  line-height: 24px;
+//  color: red;
+//  position: relative;
+//  top: 50%;
+//  left: -270px;
+//}
