--- a/src/layout/main/main.pug
+++ b/src/layout/main/main.pug
@@ -7,6 +7,7 @@ html(lang='en')
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
+
     title Toxin
     block head
 
@@ -14,8 +15,10 @@ html(lang='en')
     include ../../blocks/headers/pages-header/pages-header
   block content
   include ../pages-footer/pages-footer
-
-
+  script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript")
+  script(src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment.min.js" type="text/javascript")
+  script(src="/jquery.daterangepicker.js")
+  script(src="jquery.maskedinput.min.js")
 
 
 
