--- a/src/pages/ui/ui.pug
+++ b/src/pages/ui/ui.pug
@@ -4,7 +4,7 @@ block variables
  - let pageClass = 'ui-page';
  - let containerName = 'ui-container'
 block content
- include ../../blocks/headers/ui-header/ui-header
+ //include ../../blocks/headers/ui-header/ui-header
 
 
    
