--- a/src/blocks/calendar/calendar.pug
+++ b/src/blocks/calendar/calendar.pug
@@ -1,11 +1,6 @@
-form(action=" ", method="get")
- div.mytest
-  input.mytest1(value="" placeholder='дд.мм.гггг')
-  input.mytest2(value="" placeholder='дд.мм.гггг')
- div.calendar-button-wrapper
-  input.date-range16-clear.apply-btn2(type="button" value="Очистить")
-  button#date-range16-close(type='button') Применить
-
+span.mytest
+    button(id="date-range16-close") Close
+    button(id="date-range16-clear") Selection
 
 
 
