--- a/src/blocks/calendar/calendar.scss
+++ b/src/blocks/calendar/calendar.scss
@@ -1,32 +1,566 @@
-.calendar-button-wrapper {
-  margin-top: 400px;
+.calendar-wrapper {
+  margin: 50px 100px;
 }
-#wrapper {
-  width: 800px;
-  margin: 0 auto;
-  color: #333;
-  font-family: Tahoma, Verdana, sans-serif;
-  line-height: 1.5;
-  font-size: 14px;
+.mytest {
+  display: flex;
 }
-.demo {
-  margin: 30px 0;
+.mytest {
+  justify-content: space-between;
+  width: 320px;
+  height: 44px;
+  background: #fff;
 }
-.date-picker-wrapper .month-wrapper table .day.lalala {
-  background-color: orange;
-}
-.options {
-  display: none;
-  border-left: 6px solid #8ae;
-  padding: 10px;
-  font-size: 12px;
-  line-height: 1.4;
-  background-color: #eee;
+
+//.date-picker {
+//  width: 170px;
+//  height: 25px;
+//  padding: 0;
+//  border: 0;
+//  line-height: 25px;
+//  padding-left: 10px;
+//  font-size: 12px;
+//  font-family: Arial, sans-serif;
+//  font-weight: bold;
+//  cursor: pointer;
+//  color: #303030;
+//  position: relative;
+//  z-index: 2;
+//}
+//
+.date-picker-wrapper {
+  position: absolute;
+  //z-index: 1;
+  background: #fff;
+  border: 1px solid rgba(31, 32, 65, 0.25);
+  box-sizing: border-box;
+  box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
   border-radius: 4px;
+  cursor: default;
+  //overflow-x: hidden;
+  width: 320px;
+  padding: 0.7em 1.28em;
 }
-.date-picker-wrapper.date-range-picker19 .day.first-date-selected {
-  background-color: red !important;
+
+.dp-clearfix {
+  clear: both;
+  height: 0;
+  font-size: 0;
 }
-.date-picker-wrapper.date-range-picker19 .day.last-date-selected {
-  background-color: orange !important;
+
+.date-picker-wrapper {
+  //&.inline-wrapper {
+  //  position: relative;
+  //  box-shadow: none;
+  //  display: inline-block;
+  //}
+  //&.single-date {
+  //  width: auto;
+  //}
+  //&.no-shortcuts {
+  //  padding-bottom: 12px;
+  //}
+  //&.no-topbar {
+  //  padding-top: 12px;
+  //}
+  //.footer {
+  //  font-size: 11px;
+  //  padding-top: 3px;
+  //}
+  //b {
+  //  color: #666;
+  //  font-weight: 700;
+  //}
+  //a {
+  //  color: rgb(107, 180, 214);
+  //  text-decoration: underline;
+  //}
+  .month-name {
+    font-family: Quicksand-Bold, OpenSans-Bold;
+    font-size: 19px;
+    line-height: 24px;
+    text-align: center;
+    color: #1f2041;
+  }
+  .month-name:first-letter {
+    text-transform: uppercase;
+  }
+  //.select-wrapper {
+  //  //position: relative;
+  //  //overflow: hidden;
+  //  //display: inline-block;
+  //  //vertical-align: middle;
+  //  //background-color: red;
+  //  &:hover {
+  //    text-decoration: underline;
+  //  }
+  //}
+  .month-element {
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    //top: -8px;
+  }
+  .month-element:first-letter {
+    text-transform: uppercase;
+  }
+  //.select-wrapper select {
+  //  position: absolute;
+  //  margin: 0;
+  //  padding: 0;
+  //  left: 0;
+  //  top: -1px;
+  //  font-size: inherit;
+  //  font-style: inherit;
+  //  font-weight: inherit;
+  //  text-transform: inherit;
+  //  color: inherit;
+  //  cursor: pointer;
+  //  -webkit-appearance: none;
+  //  -moz-appearance: none;
+  //  appearance: none;
+  //  background: transparent;
+  //  border: 0;
+  //  outline: 0;
+  //  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=1)";
+  //  filter: alpha(opacity=1);
+  //  opacity: 0.01;
+  //}
+  .month-wrapper {
+    background: #fff;
+    box-sizing: border-box;
+    box-sizing: border-box;
+    cursor: default;
+    width: 282px;
+    position: relative;
+    text-align: center;
+    vertical-align: middle;
+    table {
+      width: 272px;
+      height: 300px;
+      text-align: center;
+      &.month2 {
+        width: 272px;
+        text-align: center;
+      }
+
+      th,
+      td {
+        vertical-align: middle;
+        text-align: center;
+        line-height: 14px;
+        margin: 0;
+      }
+      th {
+        height: 52px;
+        //background-color: #1f2041;
+      }
+      th:first-letter {
+        text-transform: uppercase;
+      }
+      tr {
+        height: 39.5px;
+      }
+      .day {
+        font-family: Montserrat-Regular;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 15px;
+        padding-top: 12px;
+        color: rgba(31, 32, 65, 0.5);
+        height: 40px;
+        width: 40px;
+        border-radius: 22px;
+        cursor: default;
+      }
+      div.day {
+        &.lastMonth,
+        &.nextMonth {
+          //color: #999;
+          cursor: default;
+          display: block;
+          font-family: Montserrat-Regular;
+          font-size: 12px;
+          line-height: 15px;
+          text-align: center;
+          color: rgba(31, 32, 65, 0.25);
+        }
+      }
+      .day.checked {
+        background: linear-gradient(
+          180deg,
+          rgba(188, 156, 255, 0.25) 0%,
+          rgba(139, 164, 249, 0.25) 100%
+        );
+      }
+      .week-name {
+        font-family: Montserrat-Bold;
+        font-style: normal;
+        font-size: 12px;
+        line-height: 15px;
+        color: #bc9cff;
+      }
+      .day.has-tooltip {
+        cursor: help !important;
+        .tooltip {
+          white-space: nowrap;
+        }
+      }
+      //.day.toMonth.valid {
+      //  font-family: Montserrat-Regular;
+      //  font-style: normal;
+      //  font-weight: 400;
+      //  font-size: 12px;
+      //  line-height: 15px;
+      //  text-align: center;
+      //  color: rgba(31, 32, 65, 0.5);
+      //  cursor: pointer;
+      //}
+    }
+  }
+  .time label {
+    white-space: nowrap;
+  }
+  .month-wrapper table .day {
+    &.toMonth {
+      &.valid {
+        font-family: Montserrat-Regular;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 15px;
+        text-align: center;
+        color: rgba(31, 32, 65, 0.5);
+        cursor: pointer;
+      }
+      &.hovering {
+        background-color: #cdecfa;
+      }
+    }
+    &.nextMonth,
+    &.lastMonth {
+      display: block;
+    }
+    &.real-today {
+      background: linear-gradient(
+        180deg,
+        rgb(111, 207, 151) 0%,
+        rgb(40%, 82%, 92%) 100%
+      );
+      color: white;
+      &.checked,
+      &.hovering {
+        background-color: rgb(112, 204, 213);
+      }
+    }
+  }
+  table .caption {
+    position: relative;
+    background-color: #6bb4d6;
+
+    > th {
+      &:first-of-type,
+      &:last-of-type {
+        //width: 27px;
+      }
+    }
+    .month-name {
+      //text-align: center;
+      //vertical-align: middle;
+      //background-color: red;
+    }
+    .next,
+    .prev {
+      position: relative;
+      //top: -8px;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 20px;
+      color: #bc9cff;
+      cursor: pointer;
+    }
+    .next {
+      //margin-right: -9px;
+    }
+    .prev {
+      //left: -12px;
+    }
+    .next:hover,
+    .prev:hover {
+      color: rgba(188, 156, 255, 0.25);
+    }
+  }
+  .gap {
+    position: relative;
+    z-index: 1;
+    width: 15px;
+    height: 100%;
+    background-color: red;
+    font-size: 0;
+    line-height: 0;
+    float: left;
+    top: -5px;
+    margin: 0 10px -10px;
+    visibility: hidden;
+    height: 0;
+    .gap-lines {
+      height: 100%;
+      overflow: hidden;
+    }
+    .gap-line {
+      height: 15px;
+      width: 15px;
+      position: relative;
+      .gap-1 {
+        z-index: 1;
+        height: 0;
+        border-left: 8px solid white;
+        border-top: 8px solid #eee;
+        border-bottom: 8px solid #eee;
+      }
+      .gap-2 {
+        position: absolute;
+        right: 0;
+        top: 0px;
+        z-index: 2;
+        height: 0;
+        border-left: 8px solid transparent;
+        border-top: 8px solid white;
+      }
+      .gap-3 {
+        position: absolute;
+        right: 0;
+        top: 8px;
+        z-index: 2;
+        height: 0;
+        border-left: 8px solid transparent;
+        border-bottom: 8px solid white;
+      }
+    }
+    .gap-top-mask {
+      width: 6px;
+      height: 1px;
+      position: absolute;
+      top: -1px;
+      left: 1px;
+      background-color: #eee;
+      z-index: 3;
+    }
+    .gap-bottom-mask {
+      width: 6px;
+      height: 1px;
+      position: absolute;
+      bottom: -1px;
+      left: 7px;
+      background-color: #eee;
+      z-index: 3;
+    }
+  }
+  .selected-days {
+    display: none;
+  }
+  .drp_top-bar {
+    line-height: 1.4;
+    position: relative;
+    padding: 10px 40px 10px 0;
+    .error-top,
+    .normal-top {
+      display: none;
+    }
+    .default-top {
+      display: block;
+    }
+    &.error {
+      .default-top {
+        display: none;
+      }
+      .error-top {
+        display: block;
+        color: red;
+      }
+    }
+    &.normal {
+      .default-top {
+        display: none;
+      }
+      .normal-top {
+        display: block;
+        .selection-top {
+          color: #333;
+        }
+      }
+    }
+    .apply-btn2 {
+      position: absolute;
+      left: 0px;
+      top: 220px;
+      padding: 3px 5px;
+      margin: 0;
+      font-size: 12px;
+      border-radius: 4px;
+      cursor: pointer;
+      color: #d9eef7;
+      border: solid 1px #0076a3;
+      background: #0095cd;
+      background: -webkit-gradient(
+        linear,
+        left top,
+        left bottom,
+        from(#00adee),
+        to(#0078a5)
+      );
+    }
+    .apply-btn {
+      position: absolute;
+      right: 0px;
+      top: 220px;
+      padding: 3px 5px;
+      margin: 0;
+      font-size: 12px;
+      border-radius: 4px;
+      cursor: pointer;
+      color: #d9eef7;
+      border: solid 1px #0076a3;
+      background: #0095cd;
+      background: -webkit-gradient(
+        linear,
+        left top,
+        left bottom,
+        from(#00adee),
+        to(#0078a5)
+      );
+      background: -moz-linear-gradient(top, #00adee, #0078a5);
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00adee', endColorstr='#0078a5');
+      color: white;
+      line-height: initial;
+      &.disabled {
+        cursor: pointer;
+        color: #606060;
+        border: solid 1px #b7b7b7;
+        background: #fff;
+        background: -webkit-gradient(
+          linear,
+          left top,
+          left bottom,
+          from(#fff),
+          to(#ededed)
+        );
+        background: -moz-linear-gradient(top, #fff, #ededed);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed');
+      }
+    }
+  }
+  .time {
+    position: relative;
+  }
+  &.single-month .time {
+    display: block;
+  }
+  .time input[type="range"] {
+    vertical-align: middle;
+    width: 129px;
+    padding: 0;
+    margin: 0;
+    height: 20px;
+  }
+  .time1 {
+    width: 180px;
+    padding: 0 5px;
+    text-align: center;
+  }
+}
+
+/*time styling*/
+
+.time2 {
+  width: 180px;
+  padding: 0 5px;
+  text-align: center;
+}
+
+.date-picker-wrapper {
+  .time1 {
+    float: left;
+  }
+  .time2 {
+    float: right;
+  }
+  .hour {
+    text-align: right;
+  }
+}
+
+.minute {
+  text-align: right;
+}
+
+.date-picker-wrapper {
+  .hide {
+    display: none;
+  }
+  .first-date-selected,
+  .last-date-selected {
+    background-color: #49e !important;
+    color: white !important;
+  }
+  .date-range-length-tip {
+    position: absolute;
+    margin-top: -4px;
+    margin-left: -8px;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+    display: none;
+    background-color: yellow;
+    padding: 0 6px;
+    border-radius: 2px;
+    font-size: 12px;
+    line-height: 16px;
+    -webkit-filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3));
+    -moz-filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3));
+    -ms-filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3));
+    -o-filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3));
+    filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3));
+    &:after {
+      content: "";
+      position: absolute;
+      border-left: 4px solid transparent;
+      border-right: 4px solid transparent;
+      border-top: 4px solid yellow;
+      left: 50%;
+      margin-left: -4px;
+      bottom: -4px;
+    }
+  }
+  &.two-months.no-gap {
+    .month1 .next,
+    .month2 .prev {
+      display: none;
+    }
+  }
+  .week-number {
+    padding: 5px 0;
+    line-height: 1;
+    font-size: 12px;
+    margin-bottom: 1px;
+    color: #999;
+    cursor: pointer;
+    &.week-number-selected {
+      color: #49e;
+      font-weight: bold;
+    }
+  }
+}
+.date-picker-wrapper .first-date-selected,
+.date-picker-wrapper .last-date-selected {
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(#bc9cff),
+    to(#8ba4f9)
+  ) !important;
+  background: -o-linear-gradient(top, #bc9cff 0, #8ba4f9 100%) !important;
+  background: linear-gradient(180deg, #bc9cff, #8ba4f9) !important;
+  border-radius: 22px;
+  color: #fff !important;
 }
