--- a/src/blocks/calendar/calendar.pug
+++ b/src/blocks/calendar/calendar.pug
@@ -1,6 +1,5 @@
 span.mytest
-    button(id="date-range16-close") Close
-    button(id="date-range16-clear") Selection
-
+  //button(id="date-range16-close") Close
+    //button(id="date-range16-clear") Selection
 
 
