--- a/src/blocks/calendar/calendar.scss
+++ b/src/blocks/calendar/calendar.scss
@@ -1,15 +1,15 @@
-.calendar-wrapper {
-  margin: 50px 100px;
-}
-.mytest {
-  display: flex;
-}
-.mytest {
-  justify-content: space-between;
-  width: 320px;
-  height: 44px;
-  background: #fff;
-}
+//.calendar-wrapper {
+//  margin: 50px 100px;
+//}
+//.mytest {
+//  display: flex;
+//}
+//.mytest {
+//  justify-content: space-between;
+//  width: 320px;
+//  height: 44px;
+//  background: #fff;
+//}
 
 //.date-picker {
 //  width: 170px;
@@ -29,6 +29,8 @@
 //
 .date-picker-wrapper {
   position: absolute;
+  top: 0;
+  left: 0;
   //z-index: 1;
   background: #fff;
   border: 1px solid rgba(31, 32, 65, 0.25);
