--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -1,7 +1,10 @@
 extends ../../layout/main/plain-main
 include ../../blocks/input/input
+include ../../layout/wrapper/wrapper
 block variables
  - let pageClass = 'cards';
 block content
- div.calendar-wrapper
-  include ../../blocks/calendar/calendar
+ div.w1
+  include ../../layout/search-form/search-form
+ div.w2
+  span.mytest
