--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -16,9 +16,9 @@
     background-color: var(--color8);
     color: var(--color6);
   }
-  //&_size1 {
-  //  padding: 0.5rem 1.1875rem 0.625rem 1.25rem;
-  //}
+  &_size2 {
+    padding: 1rem 2rem;
+  }
 
   &_border {
     width: 100%;
