--- a/src/layout/main/main.pug
+++ b/src/layout/main/main.pug
@@ -12,13 +12,10 @@ html(lang='en')
     block head
 
   body(class=pageClass)
-    include ../../blocks/headers/pages-header/pages-header
+    h1.site-name Отель TOXIN
+    include ../headers/pages-header/pages-header
   block content
   include ../pages-footer/pages-footer
-  script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript")
-  script(src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment.min.js" type="text/javascript")
-  script(src="/jquery.daterangepicker.js")
-  script(src="jquery.maskedinput.min.js")
 
 
 
