--- a/src/blocks/info/info.pug
+++ b/src/blocks/info/info.pug
@@ -1,29 +1,29 @@
 mixin info(info)
  -
  .info
-  div.info-top
-   div.info_left-num= info.righthead
+  .info-top
+   .info_left-num= info.righthead
     span.bold= info.price
     span.info_number= info.tophead
-  div.info_bottom
-   div.rating(class= info.starName)
+  .info_bottom
+   .rating(class= info.starName)
    a.info-number.to-room-rating(href= info.linkToRoom) #{info.bottomhead}
    //span.info_bottom-text= info.bottomtext
 
 mixin icon-info(info)
  .icon-info
-  div.icon-info-left
+  .icon-info-left
    span.material-icons= info.righthead
-  div.icon-info_right
-   div.info_number= info.tophead
-   div.info_bottom-text= info.bottomtext
+  .icon-info_right
+   .info_number= info.tophead
+   .info_bottom-text= info.bottomtext
 
 mixin comment-info(info)
  .icon-info
-  div.icon-info-left
+  .icon-info-left
    img.commet-info-img(src=(`assets/img/${info.image}`), width="48px" height="48px" alt="apartment photo")
-  div.icon-info_right
-   div.info_number= info.tophead
-   div.info_bottom-text= info.bottomtext
+  .icon-info_right
+   .info_number= info.tophead
+   .info_bottom-text= info.bottomtext
 
 
