--- a/src/blocks/input/input.scss
+++ b/src/blocks/input/input.scss
@@ -1,5 +1,5 @@
 .input-field {
-  width: 320px;
+  width: 100%;
   height: 44px;
   background: #ffffff;
   border: 1px solid rgba(31, 32, 65, 0.25);
