--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -4,7 +4,7 @@ include ../../layout/wrapper/wrapper
 block variables
  - let pageClass = 'cards';
 block content
- div.w1
+ div.cards-page-search-form-w
   include ../../layout/search-form/search-form
- div.w2
+ div.cards-page-static-calendar-w
   span.mytest
