--- a/src/layout/main/main.scss
+++ b/src/layout/main/main.scss
@@ -44,3 +44,16 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  width: 380px;
+  padding: 40px 30px 25px 30px;
+}
