--- a/src/layout/search-form/search-form.scss
+++ b/src/layout/search-form/search-form.scss
@@ -1,28 +1,11 @@
-.search-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background: #ffffff;
-  border: 1px solid rgba(0, 0, 0, 0.12);
-  box-sizing: border-box;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  width: 380px;
-  height: 374px;
-  padding: 40px 30px;
-}
-.mytest2 {
+.dinamic-calendar-wrapper {
   display: flex;
   justify-content: space-between;
-  //width: 330px;
 }
-.input-wrapper1 {
+.search-form-input-wrapper {
   width: 150px;
+  margin: 20px 0px;
 }
-
-.input-wrapper2 {
-  width: 150px;
-}
-.button-w {
-  margin-top: 20px;
+.search-form-button-wrapper {
+  margin-top: 30px;
 }
