--- a/src/blocks/calendar/calendar.scss
+++ b/src/blocks/calendar/calendar.scss
@@ -31,8 +31,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  //z-index: 1;
-  background: #fff;
+  z-index: 100;
   border: 1px solid rgba(31, 32, 65, 0.25);
   box-sizing: border-box;
   box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
@@ -41,6 +40,7 @@
   //overflow-x: hidden;
   width: 320px;
   padding: 0.7em 1.28em;
+  background-color: white;
 }
 
 .dp-clearfix {
@@ -82,6 +82,7 @@
     line-height: 24px;
     text-align: center;
     color: #1f2041;
+    background-color: white;
   }
   .month-name:first-letter {
     text-transform: uppercase;
@@ -224,6 +225,7 @@
     white-space: nowrap;
   }
   .month-wrapper table .day {
+    background-color: white;
     &.toMonth {
       &.valid {
         font-family: Montserrat-Regular;
@@ -258,7 +260,8 @@
   }
   table .caption {
     position: relative;
-    background-color: #6bb4d6;
+    background-color: white;
+    //background-color: #6bb4d6;
 
     > th {
       &:first-of-type,
