Creating booking-form

--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -6,5 +6,7 @@ block variables
 block content
  div.cards-page-search-form-w
   include ../../layout/search-form/search-form
+ div.cards-page-booking-form-w
+  include ../../layout/ booking-form/booking-form
  div.cards-page-static-calendar-w
   span.mytest
