--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -1,10 +1,15 @@
 .cards-page-search-form-w {
-  display: block;
+  display: inline-block;
   margin-top: 20px;
   margin-left: 30px;
+}
+.cards-page-booking-form-w {
+  display: inline-block;
+  margin-top: 20px;
+  margin-left: 50px;
 }
 .cards-page-static-calendar-w {
   position: absolute;
   top: 20px;
-  right: 300px;
+  right: 200px;
 }
