Creating registration-form

--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -10,3 +10,5 @@ block content
   include ../../layout/ booking-form/booking-form
  div.cards-page-static-calendar-w
   span.mytest
+ div.cards-page-registration-form-w
+  include ../../layout/registration-form/registration-form
