--- a/src/layout/registration-form/registration-form.scss
+++ b/src/layout/registration-form/registration-form.scss
@@ -1,9 +1,4 @@
-.form {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 320px;
-  height: 646px;
-  margin: 30px auto 0 auto;
-  background: pink;
+.registration-form-button-wrapper {
+  display: grid;
+  grid-template-columns: 4fr 2fr;
 }
