--- a/src/blocks/radio/radio.pug
+++ b/src/blocks/radio/radio.pug
@@ -12,7 +12,7 @@ mixin radio-buttons(props={})
  .radio-buttons(class = moduleClass + allMods)
   each buttonString, index in buttonsList
    - const {buttonTitle, checked, buttonValue} = buttonString
-   label.radio-buttons__label
+   label.form-label
     input.radio-buttons__input(
      type  = 'radio',
      name  = radioButtonsSet,
