--- a/src/blocks/toggle/toggle.scss
+++ b/src/blocks/toggle/toggle.scss
@@ -85,8 +85,14 @@
     }
   }
 }
+.toggle_lable {
+  font-family: inherit;
+  font-size: inherit;
+  font-style: inherit;
+  font-weight: inherit;
+  color: inherit;
+}
 .toggle-w {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 6fr;
 }
