--- a/src/layout/main/main.scss
+++ b/src/layout/main/main.scss
@@ -17,6 +17,8 @@ html {
   width: 100%;
   background-color: white;
   font-family: Montserrat-Regular;
+  font-size: 14px;
+  line-height: 18px;
 }
 
 a {
