--- a/src/blocks/toggle/toggle.pug
+++ b/src/blocks/toggle/toggle.pug
@@ -1,4 +1,4 @@
 mixin toggle(label, checked=false)
  .toggle-w
   input.toggle.switch(type="checkbox" checked=checked)
-  label.toggle_lable= label
+  span.toggle_lable= label
