Creating singin-form

--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -12,3 +12,5 @@ block content
   span.mytest
  div.cards-page-registration-form-w
   include ../../layout/registration-form/registration-form
+ div.cards-page-singin-form-w
+  include ../../layout/singin/singin
