--- a/src/blocks/info/info.scss
+++ b/src/blocks/info/info.scss
@@ -44,7 +44,7 @@
   font-size: 12px;
   line-height: 15px;
   text-transform: uppercase;
-  color: var(--color6);
+  color: var(--purple);
 }
 
 .info_number {
