--- a/src/blocks/toggle/toggle.pug
+++ b/src/blocks/toggle/toggle.pug
@@ -1,4 +1,4 @@
 mixin toggle(label, checked=false)
- .toggle-w
+ label.toggle-w
   input.toggle.switch(type="checkbox" checked=checked)
   span.toggle_lable= label
