--- a/src/layout/cards/cards.scss
+++ b/src/layout/cards/cards.scss
@@ -1,5 +1,5 @@
 .card {
-  background-color: var(--color8);
+  background-color: var(--white);
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
   border-radius: 4px;
   height: 257px;
