--- a/src/layout/headers/pages-header/pages-header.pug
+++ b/src/layout/headers/pages-header/pages-header.pug
@@ -21,7 +21,6 @@ div.pages-header-wrapper
           a.pages-header-nav-link(href="/mock address/") Соглашения
           i.material-icons expand_more
       .pages-header-button
-        .header-rounded-corners-gradient-borders
-          +button({lineTitle: 'Войти', mods: 'style2, size1, border'})
-        .header-rounded-corners-gradient-borders-big
-          +button({lineTitle: 'Зарегистрироваться', mods: 'style1, border-big'})
+        .rounded-corners-gradient-borders
+          +btn('Войти',  'theme-secondary')(href="/mocke me")
+        +btn('Зарегистрироваться',  'theme-main')(href="/mocke me")
