--- a/src/layout/pages-footer/pages-footer.pug
+++ b/src/layout/pages-footer/pages-footer.pug
@@ -54,9 +54,13 @@ div.pages-footer-wrapper
     +input-field({placeholder: 'Email'})
      span.material-icons arrow_forward
     div.way_icon
+     h3.visiually-hidden список социальных сетей
      ul
-      li i.fab.fa-twitter
-      li i.fab.fa-facebook-f
-      li i.fab.fa-instagram
+      a.sosial-icon-link(href="/mock me/", aria-label="твиттэр")
+       li i.fab.fa-twitter
+      a.sosial-icon-link(href="/mock me/", aria-label="фэйсбук")
+       li i.fab.fa-facebook-f
+      a.sosial-icon-link(href="/mock me/", aria-label="инстаграмм")
+       li i.fab.fa-instagram
 
 
