--- a/src/layout/pages-footer/pages-footer.scss
+++ b/src/layout/pages-footer/pages-footer.scss
@@ -2,7 +2,7 @@
 .pages-footer-wrapper {
   margin-top: 135vh;
   width: 100%;
-  background-color: var(--color8);
+  background-color: var(--white);
   box-shadow: 0 10 20 var(--color5);
   font-family: var(--first-font);
   font-size: 14px;
@@ -76,7 +76,7 @@
 //.pages-footer-wrapper {
 //  margin-top: 110vh;
 //  width: 100%;
-//  background-color: var(--color8);
+//  background-color: var(--white);
 //  box-shadow: 0 10 20 var(--color5);
 //  font-family: var(--first-font);
 //  font-style: normal;
