--- a/src/layout/search-form/search-form.scss
+++ b/src/layout/search-form/search-form.scss
@@ -4,7 +4,8 @@
 }
 .search-form-input-wrapper {
   width: 150px;
-  margin: 20px 0px;
+  margin-top: 5px;
+  margin-bottom: 20px;
 }
 .search-form-button-wrapper {
   margin-top: 30px;
