--- a/src/layout/singin/singin.pug
+++ b/src/layout/singin/singin.pug
@@ -4,19 +4,17 @@ include ../../blocks/toggle/toggle
 include ../../blocks/button/button
 form.form(method='post' name='singhup' id='singhup')
   .form-wrapper20
-    legend  Войти
+    h1.form-title  Войти
   .form-wrapper10
     +input-field({placeholder: 'Email', type: 'email'})
   .form-wrapper20
     +input-field({placeholder: 'Пароль', type: 'password'})
   .form-wrapper30
-    +button({
-      lineTitle: 'войти',
-      mods: 'style1, size2, border-big'
-    })
+    +btn('войти',  'theme-main',  true)
   .form-button-wrapper
-    p Нет аккаунта на Toxin?
-    +btn('создать',  'style2',  true, true)
+    span Нет аккаунта на Toxin?
+    .rounded-corners-gradient-borders
+      +btn('создать',  'theme-secondary')(href="/mock me")
 
 
 
