--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -1,60 +1,56 @@
 @import "src/theme/mixins";
 .button {
+  display: block;
+  width: 100%;
   border-radius: 1.375rem;
-  color: #fff;
   text-transform: uppercase;
-  font-weight: bold;
   font-size: var(--text-xs);
   font-family: var(--second-font);
-  line-height: 15px;
+  outline: none;
+  text-align: center;
+  vertical-align: middle;
+  padding: 1em;
+  border-color: transparent;
 
-  &_style1 {
-    background-color: var(--color6);
+  &_theme-main {
+    background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+    color: var(--white);
   }
 
-  &_style2 {
-    background-color: var(--color8);
-    color: var(--color6);
-  }
-  &_size2 {
-    padding: 1rem 2rem;
-  }
-
-  &_border {
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    color: var(--color6);
-    border: transparent;
+  &_theme-main:hover,
+  &_theme-main:focus {
+    background: linear-gradient(
+      180deg,
+      rgba(74%, 61%, 100%, 0.5) 0%,
+      rgba(55%, 64%, 98%, 0.5) 100%
+    );
   }
 
-  &_border-big {
-    width: 100%;
-    height: 100%;
-    background-color: #bc9cff;
-    border: transparent;
-    color: var(--color8);
+  &_theme-secondary {
+    background-color: var(--white);
+    color: var(--purple);
+  }
+
+  &_link {
+    @extend .button;
   }
 }
-
-.header-rounded-corners-gradient-borders {
-  width: 5.3125rem;
-  height: 1.95rem;
+.rounded-corners-gradient-borders {
+  display: block;
+  width: 100%;
   border: double 2px transparent;
   border-radius: 1.375rem;
   background-image: linear-gradient(white, white),
-    radial-gradient(circle at top left, #bc9cff, #8ba4f9);
+    radial-gradient(circle at top left, var(--purple), var(--blue));
   background-origin: border-box;
   background-clip: content-box, border-box;
 }
-
-.header-rounded-corners-gradient-borders-big {
-  width: 12.05rem;
-  height: 1.95rem;
-  border: double 2px transparent;
-  border-radius: 1.375rem;
+.rounded-corners-gradient-borders:hover,
+.rounded-corners-gradient-borders:focus {
   background-image: linear-gradient(white, white),
-    radial-gradient(circle at top left, #bc9cff, #bc9cff);
-  background-origin: border-box;
-  background-clip: content-box, border-box;
+    radial-gradient(
+      circle at top left,
+      rgba(74%, 61%, 100%, 0.5),
+      rgba(55%, 64%, 98%, 0.5)
+    );
 }
