--- a/src/blocks/input/input.scss
+++ b/src/blocks/input/input.scss
@@ -6,6 +6,11 @@
   box-sizing: border-box;
   border-radius: 4px;
   padding-left: 1em;
+  outline: none;
+}
+.input-field:focus {
+  //color: rgba(31, 32, 65, 0.5);
+  border-color: rgba(31, 32, 65, 0.5);
 }
 .input-field_date {
   //font-family: Montserrat-Regular;
