--- a/src/layout/headers/ui-header/ui-header.scss
+++ b/src/layout/headers/ui-header/ui-header.scss
@@ -3,7 +3,7 @@
   margin-top: 150px;
   padding: 0.75rem 0;
   min-width: 100%;
-  background-color: var(--color8);
+  background-color: var(--white);
   box-shadow: 0px 10px 20px rgba(var(--color-primary), var(--opasity-005));
 }
 
