--- a/src/layout/main/main.pug
+++ b/src/layout/main/main.pug
@@ -1,14 +1,14 @@
 block variables
 
 doctype html
-html(lang='en')
+html(lang='ru')
   head
     meta(charset='utf-8')
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
 
-    title Toxin
+    title(lang='eng') Toxin
     block head
 
   body(class=pageClass)
