--- a/src/plugins/slick-1.8.1/slick/slick-theme.scss
+++ b/src/plugins/slick-1.8.1/slick/slick-theme.scss
@@ -187,7 +187,7 @@ $slick-opacity-not-active: 0.25 !default;
         height: 8px;
         margin-right: 3px;
         background: transparent;
-        border: 1px solid var(--color8);
+        border: 1px solid var(--white);
         -moz-border-radius: 5px;
         -webkit-border-radius: 5px;
         border-radius: 5px;
