--- a/src/theme/fonts.scss
+++ b/src/theme/fonts.scss
@@ -72,12 +72,13 @@
     url("/assets/fonts/fa-brands-400.ttf") format("truetype"),
     url("/assets/fonts/fa-brands-400.svg") format("svg");
 }
-legend {
+.form-title {
   font-family: OpenSans-Bold;
   font-size: 24px;
   line-height: 30px;
-  color: #1f2041;
+  //color: #1f2041;
 }
+
 .form-wrapper10 {
   margin-bottom: 10px;
 }
@@ -90,10 +91,7 @@ legend {
 .form-wrapper40 {
   margin-bottom: 40px;
 }
-.form-button-wrapper {
-  display: grid;
-  grid-template-columns: 4fr 2fr;
-}
+
 .form-label {
   display: block;
   font-family: Montserrat-Bold;
@@ -101,7 +99,7 @@ legend {
   line-height: 15px;
   text-transform: uppercase;
   margin-bottom: 5px;
-  color: #1f2041;
+  //color: #1f2041;
 }
 
 input[placeholder] {
@@ -110,7 +108,8 @@ input[placeholder] {
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-  color: rgba(31, 32, 65, 0.75);
+
+  //color: rgba(31, 32, 65, 0.75);
   //text-transform: uppercase;
   padding: 0.9em;
 }
@@ -119,14 +118,14 @@ fieldset {
   border: rgba(0, 0, 0, 0);
   height: 100%;
   width: 100%;
-  margin: 0 auto;
+  //margin: 0 auto;
 }
 
 .text-field-right-title {
   font-family: Montserrat-Regular;
   font-weight: 400;
   text-align: right;
-  color: rgba(31, 32, 65, 0.5);
+  //color: rgba(31, 32, 65, 0.5);
 }
 
 .text-field-left-title,
@@ -140,7 +139,7 @@ fieldset {
 .text-field-left-title {
   font-family: Montserrat-Bold;
   font-weight: 700;
-  color: #1f2041;
+  //color: #1f2041;
 }
 
 section {
@@ -149,5 +148,40 @@ section {
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
-  color: rgba(31, 32, 65, 0.75);
+  //color: rgba(31, 32, 65, 0.75);
+}
+.toggle_lable {
+  font-family: Montserrat-Regular;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  //color: rgba(31, 32, 65, 0.5);
+}
+.form-button-wrapper {
+  display: grid;
+  grid-template-columns: 4fr 1.81fr;
+  align-items: center;
+  font-family: Montserrat-Regular;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+
+  //color: #000000;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  width: 380px;
+  padding: 25px 30px 25px 30px;
+}
+label:focus {
+  border-color: #1f2041;
 }
